# DM-3

./: .gitignore  README.md  features_lgbm.py  features_v3.py  make_cached_blend.py  pyproject.toml  stack_blend.py  train_deep_v2.py  train_ensemble.py  train_ensemble_v3.py  train_final.py  train_improved.py  train_lgbm.py  train_tcn_oof.py
configs/: ablation_arch.toml  ablation_features.toml  ablation_preprocess.toml  default.toml  train_fast.toml  train_v2.toml
scripts/: download_data.py  make_report_figures.py
src/har/: config.py
src/har/cli/: aggregate.py  predict.py  run_e2e.py  train.py  validate_data.py
src/har/data/: integrity.py  loader.py  types.py
src/har/eval/: metrics.py  validator.py
src/har/features/: __init__.py  config.py  engineer.py  frequency.py  stretch.py  temporal.py
src/har/models/: __init__.py  base.py  bigru.py  tcn.py  transformer.py
src/har/predict/: predictor.py
src/har/preprocess/: __init__.py  config.py  preprocessor.py
src/har/tracking/: aggregate.py  experiment.py  logger.py
tests/unit/: test_preprocessor.py
